Make \Type a subtype of \Cat